--- a/package.json
+++ b/package.json
@@ -1,38 +1,24 @@
 {
   "name": "hackforgood",
-  "version": "0.1.0",
+  "version": "0.0.0",
   "private": true,
-  "dependencies": {
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.5.0",
-    "@testing-library/user-event": "^7.2.1",
-    "baseui": "^9.67.1",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
-    "react-flexbox-grid": "^2.1.2",
-    "react-scripts": "3.4.1",
-    "styletron-engine-atomic": "^1.4.6",
-    "styletron-react": "^5.2.7"
-  },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "start": "node ./bin/www"
   },
-  "eslintConfig": {
-    "extends": "react-app"
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
+  "dependencies": {
+    "@google-cloud/speech": "^3.6.0",
+    "cookie-parser": "~1.4.4",
+    "debug": "~2.6.9",
+    "dotenv": "^8.2.0",
+    "download-file": "^0.1.5",
+    "express": "~4.16.1",
+    "http-errors": "~1.6.3",
+    "https": "^1.0.0",
+    "ibm-watson": "^5.4.0",
+    "jade": "~1.11.0",
+    "morgan": "~1.9.1",
+    "node-sass-middleware": "0.11.0",
+    "request": "^2.88.2",
+    "twilio": "^3.42.0"
   }
 }
