--- a/chatbot/package.json
+++ b/chatbot/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "@google-cloud/speech": "^3.6.0",
     "cookie-parser": "~1.4.4",
+    "crypto": "^1.0.1",
     "debug": "~2.6.9",
     "dotenv": "^8.2.0",
     "download-file": "^0.1.5",
