--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
     ports:
       - 127.0.0.1:27057:27017
     volumes:
-      - "./database/:/data/db"
+      - "./database/:/data/db:z"
     networks:
       - hackforgood-network
     environment:
