--- a/chatbot/package.json
+++ b/chatbot/package.json
@@ -13,6 +13,7 @@
     "dotenv": "^8.2.0",
     "download-file": "^0.1.5",
     "express": "~4.16.1",
+    "googleapis": "^48.0.0",
     "http-errors": "~1.6.3",
     "https": "^1.0.0",
     "ibm-watson": "^5.4.0",
